# django-admin-seminar-sample

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: format.yml  setup.yml
seminar-sample/: .gitignore  Makefile  default.env  docker-compose.yml
seminar-sample/files/: local.default.py  proxy.conf
seminar-sample/files/fixtures/: 0.superuser.json  1.aibou.json
seminar-sample/files/init-localstack/: 10-s3-create-buckets.sh  20-s3-sync-files.sh
src/: .gitignore
src/app/activity/: apps.py  urls.py
src/app/activity/admin/: __init__.py  activity.py  archive.py
src/app/activity/executors/: archiver.py
src/app/activity/migrations/: 0001_initial.py  0002_activityarchive.py
src/app/activity/models/: __init__.py  activity.py  archive.py
src/app/activity/views/: __init__.py  archive.py
src/app/common/: apps.py  archive_utils.py  sites.py
src/app/common/admin/: __init__.py  userfilter.py
src/app/common/fields/: __init__.py  color.py  file.py
src/app/common/utils/: __init__.py  dateutils.py  file.py  validators.py
src/app/common/widgets/: __init__.py  image.py
src/app/readlog/: apps.py  urls.py
src/app/readlog/admin/: __init__.py  bibliographic.py  importer.py  readlog.py
src/app/readlog/executor/: __init__.py  importer.py
src/app/readlog/migrations/: 0001_initial.py  0002_bibliographic_picture_bibliographic_sample.py  0003_readlog.py  0004_importbibliographic.py
src/app/user/: apps.py  urls.py
src/app/user/admin/: __init__.py  (+1 more)
src/project/: asgi.py  urls.py  wsgi.py
src/project/settings/: base.py  docker.py
(+28 files in other folders)
